Fixes bugs from updating servlet/primefaces versions & styling
Includes:

Dialog rendering changed, required showing dialogs before rendering
contents.

Upgrade causing server to javascript JSON transfer to convert null into
undefined. Was causing issues when displaying rank enrichment plots,
fixed but could pop up elsewhere?

Style bugs fixed (particularly in input boxes).

A few styling fixes, including reset zoom button and not showing point
markers on plots. Resolves #2.

--- a/gotrack/src/main/webapp/resources/css/common.css
+++ b/gotrack/src/main/webapp/resources/css/common.css
@@ -64,12 +64,24 @@ div.ui-terminal {
 	color: white;
 }
 
-button.icon-only {
-	height: 0px;
-	width: 0px;
-	top: 14px;
-	left: 5px;
+button.ui-button.icon-only {
+	background:none;
+	border:none;
+	width:16px;
 }
+
+button.ui-button.icon-only:focus {
+	outline:none;
+}
+
+button.ui-button.icon-only span {
+	left:0;
+}
+
+span.ui-column-title > button.ui-button.icon-only span {
+	margin-top: -12px;
+}
+	
 
 #body tr.ui-state-highlight td {
 	text-shadow: none;
@@ -119,4 +131,9 @@ button.icon-only {
 
 i.fa.fa-external-link:hover {
 	color: #0000ff;
+}
+
+table.no-border tr, 
+table.no-border td {
+	border: none !important;
 }
