--- a/gotrack/src/main/webapp/resources/css/term.css
+++ b/gotrack/src/main/webapp/resources/css/term.css
@@ -3,11 +3,6 @@ table.termSearchTable {
 	/* border: 1px solid #A8A8A8; */
 }
 
-table.no-border tr, 
-table.no-border td {
-	border: none !important;
-}
-
 #currentAncestry {
 	/* margin-top: 25px; */
 	border: 1px solid grey;
